welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true;
           ^SnakeBuggle:11: warning: enclosing method fini has result type Unit: return value discarded
    return true;
    ^SnakeBuggle:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false;
         ^SnakeBuggle:16: warning: enclosing method fini has result type Unit: return value discarded
  return false;
  ^SnakeBuggle:20: error: not found: value baisserBrosse
  baisserBrosse();
  ^SnakeBuggle:21: error: value unary_! is not a member of Unit
  while(!fini()){
        ^SnakeBuggle:25: error: not found: value get
      setY(get(Y)-1);
           ^SnakeBuggle:25: error: not found: value Y
      setY(get(Y)-1);
               ^